test/Fail/Issue483c.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  _15 _ = refute _ : ⊥ (blocked on _15)

Issue483c.agda:20.9-21.13: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue483c.agda:20.9-10
  Issue483c.agda:21.9-13
